parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> asignacion
Rule 2     sentencias -> expresion
Rule 3     sentencias -> metodos
Rule 4     sentencias -> then
Rule 5     sentencias -> if
Rule 6     sentencias -> while
Rule 7     sentencias -> for
Rule 8     sentencias -> sort
Rule 9     sentencias -> include
Rule 10    sentencias -> valueOf
Rule 11    sentencias -> chartAt
Rule 12    sentencias -> push
Rule 13    sentencias -> slice
Rule 14    sentencias -> pop
Rule 15    sentencias -> concat
Rule 16    metodos -> imprimir
Rule 17    imprimir -> PROMPT LPAREN factor RPAREN
Rule 18    imprimir -> CONSOLE LPAREN factor RPAREN
Rule 19    if -> IF LPAREN condicion RPAREN sentencias
Rule 20    if -> IF LPAREN condicion RPAREN sentencias else
Rule 21    else -> ELSE LLLAVES sentencias RLLAVES
Rule 22    while -> WHILE LPAREN condicion RPAREN sentencias
Rule 23    for -> FOR LPAREN VAR condicion PUNTOCOMA condicion PUNTOCOMA instruccion RPAREN
Rule 24    sort -> LISTA SORT
Rule 25    include -> factor INCLUDE LPAREN factor RPAREN
Rule 26    valueOf -> factor VALUEOF
Rule 27    chartAt -> factor CHARTAT LPAREN factor RPAREN
Rule 28    push -> factor PUSH LPAREN factor RPAREN
Rule 29    slice -> factor SLICE LPAREN factor COMA factor RPAREN
Rule 30    pop -> factor POP
Rule 31    concat -> factor CONCAT LPAREN factor RPAREN
Rule 32    instruccion -> factor ASCENDER
Rule 33    instruccion -> factor DESCENDER
Rule 34    then -> LLLAVES sentencias RLLAVES
Rule 35    asignacion -> PALABRA ASIGNACION expresion
Rule 36    expresion -> term MAS factor
Rule 37    expresion -> term MENOS factor
Rule 38    expresion -> term
Rule 39    expresion -> expresion PRODUCTO term
Rule 40    expresion -> expresion DIVISION term
Rule 41    expresion -> expresion POTENCIA term
Rule 42    expresion -> term MAYOR factor
Rule 43    expresion -> term MENOR factor
Rule 44    condicion -> factor IGUAL factor
Rule 45    condicion -> factor MAYOR factor
Rule 46    condicion -> factor MENOR factor
Rule 47    condicion -> factor ASIGNACION factor
Rule 48    condicion -> NOT factor
Rule 49    condicion -> factor DIFERENTE factor
Rule 50    condicion -> compuesta AND condicion
Rule 51    condicion -> compuesta OR condicion
Rule 52    condicion -> compuesta
Rule 53    compuesta -> LPAREN condicion RPAREN
Rule 54    term -> factor
Rule 55    factor -> NEW SET LPAREN LISTA RPAREN
Rule 56    factor -> NUMERO
Rule 57    factor -> FLOTANTE
Rule 58    factor -> PALABRA
Rule 59    factor -> STRING
Rule 60    factor -> LPAREN expresion RPAREN
Rule 61    factor -> LISTA
Rule 62    factor -> BOOLEANO
Rule 63    factor -> OBJETO

Terminals, with rules where they appear

AND                  : 50
ASCENDER             : 32
ASIGNACION           : 35 47
BOOLEANO             : 62
CHARTAT              : 27
COMA                 : 29
CONCAT               : 31
CONSOLE              : 18
DESCENDER            : 33
DIFERENTE            : 49
DIVISION             : 40
ELSE                 : 21
FLOTANTE             : 57
FOR                  : 23
IF                   : 19 20
IGUAL                : 44
INCLUDE              : 25
LISTA                : 24 55 61
LLLAVES              : 21 34
LPAREN               : 17 18 19 20 22 23 25 27 28 29 31 53 55 60
MAS                  : 36
MAYOR                : 42 45
MENOR                : 43 46
MENOS                : 37
NEW                  : 55
NOT                  : 48
NUMERO               : 56
OBJETO               : 63
OR                   : 51
PALABRA              : 35 58
POP                  : 30
POTENCIA             : 41
PRODUCTO             : 39
PROMPT               : 17
PUNTOCOMA            : 23 23
PUSH                 : 28
RLLAVES              : 21 34
RPAREN               : 17 18 19 20 22 23 25 27 28 29 31 53 55 60
SET                  : 55
SLICE                : 29
SORT                 : 24
STRING               : 59
VALUEOF              : 26
VAR                  : 23
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

asignacion           : 1
chartAt              : 11
compuesta            : 50 51 52
concat               : 15
condicion            : 19 20 22 23 23 50 51 53
else                 : 20
expresion            : 2 35 39 40 41 60
factor               : 17 18 25 25 26 27 27 28 28 29 29 29 30 31 31 32 33 36 37 42 43 44 44 45 45 46 46 47 47 48 49 49 54
for                  : 7
if                   : 5
imprimir             : 16
include              : 9
instruccion          : 23
metodos              : 3
pop                  : 14
push                 : 12
sentencias           : 19 20 21 22 34 0
slice                : 13
sort                 : 8
term                 : 36 37 38 39 40 41 42 43
then                 : 4
valueOf              : 10
while                : 6

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . asignacion
    (2) sentencias -> . expresion
    (3) sentencias -> . metodos
    (4) sentencias -> . then
    (5) sentencias -> . if
    (6) sentencias -> . while
    (7) sentencias -> . for
    (8) sentencias -> . sort
    (9) sentencias -> . include
    (10) sentencias -> . valueOf
    (11) sentencias -> . chartAt
    (12) sentencias -> . push
    (13) sentencias -> . slice
    (14) sentencias -> . pop
    (15) sentencias -> . concat
    (35) asignacion -> . PALABRA ASIGNACION expresion
    (36) expresion -> . term MAS factor
    (37) expresion -> . term MENOS factor
    (38) expresion -> . term
    (39) expresion -> . expresion PRODUCTO term
    (40) expresion -> . expresion DIVISION term
    (41) expresion -> . expresion POTENCIA term
    (42) expresion -> . term MAYOR factor
    (43) expresion -> . term MENOR factor
    (16) metodos -> . imprimir
    (34) then -> . LLLAVES sentencias RLLAVES
    (19) if -> . IF LPAREN condicion RPAREN sentencias
    (20) if -> . IF LPAREN condicion RPAREN sentencias else
    (22) while -> . WHILE LPAREN condicion RPAREN sentencias
    (23) for -> . FOR LPAREN VAR condicion PUNTOCOMA condicion PUNTOCOMA instruccion RPAREN
    (24) sort -> . LISTA SORT
    (25) include -> . factor INCLUDE LPAREN factor RPAREN
    (26) valueOf -> . factor VALUEOF
    (27) chartAt -> . factor CHARTAT LPAREN factor RPAREN
    (28) push -> . factor PUSH LPAREN factor RPAREN
    (29) slice -> . factor SLICE LPAREN factor COMA factor RPAREN
    (30) pop -> . factor POP
    (31) concat -> . factor CONCAT LPAREN factor RPAREN
    (54) term -> . factor
    (17) imprimir -> . PROMPT LPAREN factor RPAREN
    (18) imprimir -> . CONSOLE LPAREN factor RPAREN
    (55) factor -> . NEW SET LPAREN LISTA RPAREN
    (56) factor -> . NUMERO
    (57) factor -> . FLOTANTE
    (58) factor -> . PALABRA
    (59) factor -> . STRING
    (60) factor -> . LPAREN expresion RPAREN
    (61) factor -> . LISTA
    (62) factor -> . BOOLEANO
    (63) factor -> . OBJETO

    PALABRA         shift and go to state 17
    LLLAVES         shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    LISTA           shift and go to state 26
    PROMPT          shift and go to state 27
    CONSOLE         shift and go to state 28
    NEW             shift and go to state 29
    NUMERO          shift and go to state 30
    FLOTANTE        shift and go to state 31
    STRING          shift and go to state 32
    LPAREN          shift and go to state 23
    BOOLEANO        shift and go to state 33
    OBJETO          shift and go to state 34

    sentencias                     shift and go to state 1
    asignacion                     shift and go to state 2
    expresion                      shift and go to state 3
    metodos                        shift and go to state 4
    then                           shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    for                            shift and go to state 8
    sort                           shift and go to state 9
    include                        shift and go to state 10
    valueOf                        shift and go to state 11
    chartAt                        shift and go to state 12
    push                           shift and go to state 13
    slice                          shift and go to state 14
    pop                            shift and go to state 15
    concat                         shift and go to state 16
    term                           shift and go to state 18
    factor                         shift and go to state 19
    imprimir                       shift and go to state 20

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> asignacion .

    $end            reduce using rule 1 (sentencias -> asignacion .)
    RLLAVES         reduce using rule 1 (sentencias -> asignacion .)
    ELSE            reduce using rule 1 (sentencias -> asignacion .)


state 3

    (2) sentencias -> expresion .
    (39) expresion -> expresion . PRODUCTO term
    (40) expresion -> expresion . DIVISION term
    (41) expresion -> expresion . POTENCIA term

    $end            reduce using rule 2 (sentencias -> expresion .)
    RLLAVES         reduce using rule 2 (sentencias -> expresion .)
    ELSE            reduce using rule 2 (sentencias -> expresion .)
    PRODUCTO        shift and go to state 35
    DIVISION        shift and go to state 36
    POTENCIA        shift and go to state 37


state 4

    (3) sentencias -> metodos .

    $end            reduce using rule 3 (sentencias -> metodos .)
    RLLAVES         reduce using rule 3 (sentencias -> metodos .)
    ELSE            reduce using rule 3 (sentencias -> metodos .)


state 5

    (4) sentencias -> then .

    $end            reduce using rule 4 (sentencias -> then .)
    RLLAVES         reduce using rule 4 (sentencias -> then .)
    ELSE            reduce using rule 4 (sentencias -> then .)


state 6

    (5) sentencias -> if .

    $end            reduce using rule 5 (sentencias -> if .)
    RLLAVES         reduce using rule 5 (sentencias -> if .)
    ELSE            reduce using rule 5 (sentencias -> if .)


state 7

    (6) sentencias -> while .

    $end            reduce using rule 6 (sentencias -> while .)
    RLLAVES         reduce using rule 6 (sentencias -> while .)
    ELSE            reduce using rule 6 (sentencias -> while .)


state 8

    (7) sentencias -> for .

    $end            reduce using rule 7 (sentencias -> for .)
    RLLAVES         reduce using rule 7 (sentencias -> for .)
    ELSE            reduce using rule 7 (sentencias -> for .)


state 9

    (8) sentencias -> sort .

    $end            reduce using rule 8 (sentencias -> sort .)
    RLLAVES         reduce using rule 8 (sentencias -> sort .)
    ELSE            reduce using rule 8 (sentencias -> sort .)


state 10

    (9) sentencias -> include .

    $end            reduce using rule 9 (sentencias -> include .)
    RLLAVES         reduce using rule 9 (sentencias -> include .)
    ELSE            reduce using rule 9 (sentencias -> include .)


state 11

    (10) sentencias -> valueOf .

    $end            reduce using rule 10 (sentencias -> valueOf .)
    RLLAVES         reduce using rule 10 (sentencias -> valueOf .)
    ELSE            reduce using rule 10 (sentencias -> valueOf .)


state 12

    (11) sentencias -> chartAt .

    $end            reduce using rule 11 (sentencias -> chartAt .)
    RLLAVES         reduce using rule 11 (sentencias -> chartAt .)
    ELSE            reduce using rule 11 (sentencias -> chartAt .)


state 13

    (12) sentencias -> push .

    $end            reduce using rule 12 (sentencias -> push .)
    RLLAVES         reduce using rule 12 (sentencias -> push .)
    ELSE            reduce using rule 12 (sentencias -> push .)


state 14

    (13) sentencias -> slice .

    $end            reduce using rule 13 (sentencias -> slice .)
    RLLAVES         reduce using rule 13 (sentencias -> slice .)
    ELSE            reduce using rule 13 (sentencias -> slice .)


state 15

    (14) sentencias -> pop .

    $end            reduce using rule 14 (sentencias -> pop .)
    RLLAVES         reduce using rule 14 (sentencias -> pop .)
    ELSE            reduce using rule 14 (sentencias -> pop .)


state 16

    (15) sentencias -> concat .

    $end            reduce using rule 15 (sentencias -> concat .)
    RLLAVES         reduce using rule 15 (sentencias -> concat .)
    ELSE            reduce using rule 15 (sentencias -> concat .)


state 17

    (35) asignacion -> PALABRA . ASIGNACION expresion
    (58) factor -> PALABRA .

    ASIGNACION      shift and go to state 38
    INCLUDE         reduce using rule 58 (factor -> PALABRA .)
    VALUEOF         reduce using rule 58 (factor -> PALABRA .)
    CHARTAT         reduce using rule 58 (factor -> PALABRA .)
    PUSH            reduce using rule 58 (factor -> PALABRA .)
    SLICE           reduce using rule 58 (factor -> PALABRA .)
    POP             reduce using rule 58 (factor -> PALABRA .)
    CONCAT          reduce using rule 58 (factor -> PALABRA .)
    MAS             reduce using rule 58 (factor -> PALABRA .)
    MENOS           reduce using rule 58 (factor -> PALABRA .)
    MAYOR           reduce using rule 58 (factor -> PALABRA .)
    MENOR           reduce using rule 58 (factor -> PALABRA .)
    PRODUCTO        reduce using rule 58 (factor -> PALABRA .)
    DIVISION        reduce using rule 58 (factor -> PALABRA .)
    POTENCIA        reduce using rule 58 (factor -> PALABRA .)
    $end            reduce using rule 58 (factor -> PALABRA .)
    RLLAVES         reduce using rule 58 (factor -> PALABRA .)
    ELSE            reduce using rule 58 (factor -> PALABRA .)


state 18

    (36) expresion -> term . MAS factor
    (37) expresion -> term . MENOS factor
    (38) expresion -> term .
    (42) expresion -> term . MAYOR factor
    (43) expresion -> term . MENOR factor

    MAS             shift and go to state 39
    MENOS           shift and go to state 40
    PRODUCTO        reduce using rule 38 (expresion -> term .)
    DIVISION        reduce using rule 38 (expresion -> term .)
    POTENCIA        reduce using rule 38 (expresion -> term .)
    $end            reduce using rule 38 (expresion -> term .)
    RLLAVES         reduce using rule 38 (expresion -> term .)
    RPAREN          reduce using rule 38 (expresion -> term .)
    ELSE            reduce using rule 38 (expresion -> term .)
    MAYOR           shift and go to state 41
    MENOR           shift and go to state 42


state 19

    (25) include -> factor . INCLUDE LPAREN factor RPAREN
    (26) valueOf -> factor . VALUEOF
    (27) chartAt -> factor . CHARTAT LPAREN factor RPAREN
    (28) push -> factor . PUSH LPAREN factor RPAREN
    (29) slice -> factor . SLICE LPAREN factor COMA factor RPAREN
    (30) pop -> factor . POP
    (31) concat -> factor . CONCAT LPAREN factor RPAREN
    (54) term -> factor .

    INCLUDE         shift and go to state 43
    VALUEOF         shift and go to state 44
    CHARTAT         shift and go to state 45
    PUSH            shift and go to state 46
    SLICE           shift and go to state 47
    POP             shift and go to state 48
    CONCAT          shift and go to state 49
    MAS             reduce using rule 54 (term -> factor .)
    MENOS           reduce using rule 54 (term -> factor .)
    MAYOR           reduce using rule 54 (term -> factor .)
    MENOR           reduce using rule 54 (term -> factor .)
    PRODUCTO        reduce using rule 54 (term -> factor .)
    DIVISION        reduce using rule 54 (term -> factor .)
    POTENCIA        reduce using rule 54 (term -> factor .)
    $end            reduce using rule 54 (term -> factor .)
    RLLAVES         reduce using rule 54 (term -> factor .)
    ELSE            reduce using rule 54 (term -> factor .)


state 20

    (16) metodos -> imprimir .

    $end            reduce using rule 16 (metodos -> imprimir .)
    RLLAVES         reduce using rule 16 (metodos -> imprimir .)
    ELSE            reduce using rule 16 (metodos -> imprimir .)


state 21

    (34) then -> LLLAVES . sentencias RLLAVES
    (1) sentencias -> . asignacion
    (2) sentencias -> . expresion
    (3) sentencias -> . metodos
    (4) sentencias -> . then
    (5) sentencias -> . if
    (6) sentencias -> . while
    (7) sentencias -> . for
    (8) sentencias -> . sort
    (9) sentencias -> . include
    (10) sentencias -> . valueOf
    (11) sentencias -> . chartAt
    (12) sentencias -> . push
    (13) sentencias -> . slice
    (14) sentencias -> . pop
    (15) sentencias -> . concat
    (35) asignacion -> . PALABRA ASIGNACION expresion
    (36) expresion -> . term MAS factor
    (37) expresion -> . term MENOS factor
    (38) expresion -> . term
    (39) expresion -> . expresion PRODUCTO term
    (40) expresion -> . expresion DIVISION term
    (41) expresion -> . expresion POTENCIA term
    (42) expresion -> . term MAYOR factor
    (43) expresion -> . term MENOR factor
    (16) metodos -> . imprimir
    (34) then -> . LLLAVES sentencias RLLAVES
    (19) if -> . IF LPAREN condicion RPAREN sentencias
    (20) if -> . IF LPAREN condicion RPAREN sentencias else
    (22) while -> . WHILE LPAREN condicion RPAREN sentencias
    (23) for -> . FOR LPAREN VAR condicion PUNTOCOMA condicion PUNTOCOMA instruccion RPAREN
    (24) sort -> . LISTA SORT
    (25) include -> . factor INCLUDE LPAREN factor RPAREN
    (26) valueOf -> . factor VALUEOF
    (27) chartAt -> . factor CHARTAT LPAREN factor RPAREN
    (28) push -> . factor PUSH LPAREN factor RPAREN
    (29) slice -> . factor SLICE LPAREN factor COMA factor RPAREN
    (30) pop -> . factor POP
    (31) concat -> . factor CONCAT LPAREN factor RPAREN
    (54) term -> . factor
    (17) imprimir -> . PROMPT LPAREN factor RPAREN
    (18) imprimir -> . CONSOLE LPAREN factor RPAREN
    (55) factor -> . NEW SET LPAREN LISTA RPAREN
    (56) factor -> . NUMERO
    (57) factor -> . FLOTANTE
    (58) factor -> . PALABRA
    (59) factor -> . STRING
    (60) factor -> . LPAREN expresion RPAREN
    (61) factor -> . LISTA
    (62) factor -> . BOOLEANO
    (63) factor -> . OBJETO

    PALABRA         shift and go to state 17
    LLLAVES         shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    LISTA           shift and go to state 26
    PROMPT          shift and go to state 27
    CONSOLE         shift and go to state 28
    NEW             shift and go to state 29
    NUMERO          shift and go to state 30
    FLOTANTE        shift and go to state 31
    STRING          shift and go to state 32
    LPAREN          shift and go to state 23
    BOOLEANO        shift and go to state 33
    OBJETO          shift and go to state 34

    sentencias                     shift and go to state 50
    asignacion                     shift and go to state 2
    expresion                      shift and go to state 3
    metodos                        shift and go to state 4
    then                           shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    for                            shift and go to state 8
    sort                           shift and go to state 9
    include                        shift and go to state 10
    valueOf                        shift and go to state 11
    chartAt                        shift and go to state 12
    push                           shift and go to state 13
    slice                          shift and go to state 14
    pop                            shift and go to state 15
    concat                         shift and go to state 16
    term                           shift and go to state 18
    factor                         shift and go to state 19
    imprimir                       shift and go to state 20

state 22

    (19) if -> IF . LPAREN condicion RPAREN sentencias
    (20) if -> IF . LPAREN condicion RPAREN sentencias else

    LPAREN          shift and go to state 51


state 23

    (60) factor -> LPAREN . expresion RPAREN
    (36) expresion -> . term MAS factor
    (37) expresion -> . term MENOS factor
    (38) expresion -> . term
    (39) expresion -> . expresion PRODUCTO term
    (40) expresion -> . expresion DIVISION term
    (41) expresion -> . expresion POTENCIA term
    (42) expresion -> . term MAYOR factor
    (43) expresion -> . term MENOR factor
    (54) term -> . factor
    (55) factor -> . NEW SET LPAREN LISTA RPAREN
    (56) factor -> . NUMERO
    (57) factor -> . FLOTANTE
    (58) factor -> . PALABRA
    (59) factor -> . STRING
    (60) factor -> . LPAREN expresion RPAREN
    (61) factor -> . LISTA
    (62) factor -> . BOOLEANO
    (63) factor -> . OBJETO

    NEW             shift and go to state 29
    NUMERO          shift and go to state 30
    FLOTANTE        shift and go to state 31
    PALABRA         shift and go to state 55
    STRING          shift and go to state 32
    LPAREN          shift and go to state 23
    LISTA           shift and go to state 54
    BOOLEANO        shift and go to state 33
    OBJETO          shift and go to state 34

    expresion                      shift and go to state 52
    term                           shift and go to state 18
    factor                         shift and go to state 53

state 24

    (22) while -> WHILE . LPAREN condicion RPAREN sentencias

    LPAREN          shift and go to state 56


state 25

    (23) for -> FOR . LPAREN VAR condicion PUNTOCOMA condicion PUNTOCOMA instruccion RPAREN

    LPAREN          shift and go to state 57


state 26

    (24) sort -> LISTA . SORT
    (61) factor -> LISTA .

    SORT            shift and go to state 58
    INCLUDE         reduce using rule 61 (factor -> LISTA .)
    VALUEOF         reduce using rule 61 (factor -> LISTA .)
    CHARTAT         reduce using rule 61 (factor -> LISTA .)
    PUSH            reduce using rule 61 (factor -> LISTA .)
    SLICE           reduce using rule 61 (factor -> LISTA .)
    POP             reduce using rule 61 (factor -> LISTA .)
    CONCAT          reduce using rule 61 (factor -> LISTA .)
    MAS             reduce using rule 61 (factor -> LISTA .)
    MENOS           reduce using rule 61 (factor -> LISTA .)
    MAYOR           reduce using rule 61 (factor -> LISTA .)
    MENOR           reduce using rule 61 (factor -> LISTA .)
    PRODUCTO        reduce using rule 61 (factor -> LISTA .)
    DIVISION        reduce using rule 61 (factor -> LISTA .)
    POTENCIA        reduce using rule 61 (factor -> LISTA .)
    $end            reduce using rule 61 (factor -> LISTA .)
    RLLAVES         reduce using rule 61 (factor -> LISTA .)
    ELSE            reduce using rule 61 (factor -> LISTA .)


state 27

    (17) imprimir -> PROMPT . LPAREN factor RPAREN

    LPAREN          shift and go to state 59


state 28

    (18) imprimir -> CONSOLE . LPAREN factor RPAREN

    LPAREN          shift and go to state 60


state 29

    (55) factor -> NEW . SET LPAREN LISTA RPAREN

    SET             shift and go to state 61


state 30

    (56) factor -> NUMERO .

    INCLUDE         reduce using rule 56 (factor -> NUMERO .)
    VALUEOF         reduce using rule 56 (factor -> NUMERO .)
    CHARTAT         reduce using rule 56 (factor -> NUMERO .)
    PUSH            reduce using rule 56 (factor -> NUMERO .)
    SLICE           reduce using rule 56 (factor -> NUMERO .)
    POP             reduce using rule 56 (factor -> NUMERO .)
    CONCAT          reduce using rule 56 (factor -> NUMERO .)
    MAS             reduce using rule 56 (factor -> NUMERO .)
    MENOS           reduce using rule 56 (factor -> NUMERO .)
    MAYOR           reduce using rule 56 (factor -> NUMERO .)
    MENOR           reduce using rule 56 (factor -> NUMERO .)
    PRODUCTO        reduce using rule 56 (factor -> NUMERO .)
    DIVISION        reduce using rule 56 (factor -> NUMERO .)
    POTENCIA        reduce using rule 56 (factor -> NUMERO .)
    $end            reduce using rule 56 (factor -> NUMERO .)
    RLLAVES         reduce using rule 56 (factor -> NUMERO .)
    RPAREN          reduce using rule 56 (factor -> NUMERO .)
    ELSE            reduce using rule 56 (factor -> NUMERO .)
    IGUAL           reduce using rule 56 (factor -> NUMERO .)
    ASIGNACION      reduce using rule 56 (factor -> NUMERO .)
    DIFERENTE       reduce using rule 56 (factor -> NUMERO .)
    COMA            reduce using rule 56 (factor -> NUMERO .)
    PUNTOCOMA       reduce using rule 56 (factor -> NUMERO .)
    ASCENDER        reduce using rule 56 (factor -> NUMERO .)
    DESCENDER       reduce using rule 56 (factor -> NUMERO .)


state 31

    (57) factor -> FLOTANTE .

    INCLUDE         reduce using rule 57 (factor -> FLOTANTE .)
    VALUEOF         reduce using rule 57 (factor -> FLOTANTE .)
    CHARTAT         reduce using rule 57 (factor -> FLOTANTE .)
    PUSH            reduce using rule 57 (factor -> FLOTANTE .)
    SLICE           reduce using rule 57 (factor -> FLOTANTE .)
    POP             reduce using rule 57 (factor -> FLOTANTE .)
    CONCAT          reduce using rule 57 (factor -> FLOTANTE .)
    MAS             reduce using rule 57 (factor -> FLOTANTE .)
    MENOS           reduce using rule 57 (factor -> FLOTANTE .)
    MAYOR           reduce using rule 57 (factor -> FLOTANTE .)
    MENOR           reduce using rule 57 (factor -> FLOTANTE .)
    PRODUCTO        reduce using rule 57 (factor -> FLOTANTE .)
    DIVISION        reduce using rule 57 (factor -> FLOTANTE .)
    POTENCIA        reduce using rule 57 (factor -> FLOTANTE .)
    $end            reduce using rule 57 (factor -> FLOTANTE .)
    RLLAVES         reduce using rule 57 (factor -> FLOTANTE .)
    RPAREN          reduce using rule 57 (factor -> FLOTANTE .)
    ELSE            reduce using rule 57 (factor -> FLOTANTE .)
    IGUAL           reduce using rule 57 (factor -> FLOTANTE .)
    ASIGNACION      reduce using rule 57 (factor -> FLOTANTE .)
    DIFERENTE       reduce using rule 57 (factor -> FLOTANTE .)
    COMA            reduce using rule 57 (factor -> FLOTANTE .)
    PUNTOCOMA       reduce using rule 57 (factor -> FLOTANTE .)
    ASCENDER        reduce using rule 57 (factor -> FLOTANTE .)
    DESCENDER       reduce using rule 57 (factor -> FLOTANTE .)


state 32

    (59) factor -> STRING .

    INCLUDE         reduce using rule 59 (factor -> STRING .)
    VALUEOF         reduce using rule 59 (factor -> STRING .)
    CHARTAT         reduce using rule 59 (factor -> STRING .)
    PUSH            reduce using rule 59 (factor -> STRING .)
    SLICE           reduce using rule 59 (factor -> STRING .)
    POP             reduce using rule 59 (factor -> STRING .)
    CONCAT          reduce using rule 59 (factor -> STRING .)
    MAS             reduce using rule 59 (factor -> STRING .)
    MENOS           reduce using rule 59 (factor -> STRING .)
    MAYOR           reduce using rule 59 (factor -> STRING .)
    MENOR           reduce using rule 59 (factor -> STRING .)
    PRODUCTO        reduce using rule 59 (factor -> STRING .)
    DIVISION        reduce using rule 59 (factor -> STRING .)
    POTENCIA        reduce using rule 59 (factor -> STRING .)
    $end            reduce using rule 59 (factor -> STRING .)
    RLLAVES         reduce using rule 59 (factor -> STRING .)
    RPAREN          reduce using rule 59 (factor -> STRING .)
    ELSE            reduce using rule 59 (factor -> STRING .)
    IGUAL           reduce using rule 59 (factor -> STRING .)
    ASIGNACION      reduce using rule 59 (factor -> STRING .)
    DIFERENTE       reduce using rule 59 (factor -> STRING .)
    COMA            reduce using rule 59 (factor -> STRING .)
    PUNTOCOMA       reduce using rule 59 (factor -> STRING .)
    ASCENDER        reduce using rule 59 (factor -> STRING .)
    DESCENDER       reduce using rule 59 (factor -> STRING .)


state 33

    (62) factor -> BOOLEANO .
